salesforce/force-app/main/default/objects/Case/fields/AFM_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>AFM_Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <description>One of the 6 AFM rule types. API value = rule id (snake_case) to match the Phase-05 detector and the AFM→SF write path.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>lost_signal</fullName>
                <label>Lost Signal</label>
            </value>
            <value>
                <fullName>diversion</fullName>
                <label>Diversion</label>
            </value>
            <value>
                <fullName>excessive_hold</fullName>
                <label>Excessive Hold</label>
            </value>
            <value>
                <fullName>weather_impact</fullName>
                <label>Weather Impact</label>
            </value>
            <value>
                <fullName>go_around</fullName>
                <label>Go-Around</label>
            </value>
            <value>
                <fullName>delay</fullName>
                <label>Delay</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>