salesforce/force-app/main/default/objects/Case/fields/AFM_Customer_Region__c.field-meta.xml
<CustomField>
    <fullName>AFM_Customer_Region__c</fullName>
    <label>Customer Region</label>
    <type>Picklist</type>
    <description>Customer region this case is scoped to. TitleCase per SALESFORCE.md §10.1.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>