salesforce/force-app/main/default/objects/Case/fields/AFM_Detection_Facts__c.field-meta.xml
<CustomField>
    <fullName>AFM_Detection_Facts__c</fullName>
    <label>Detection Facts</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>JSON of structured rule output from the case detector.</description>
</CustomField>