salesforce/force-app/main/default/objects/Case/fields/AFM_External_Id__c.field-meta.xml
<CustomField>
    <fullName>AFM_External_Id__c</fullName>
    <label>External ID</label>
    <type>Text</type>
    <length>40</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>CASE-YYYY-NNNNNN. Correlates to Postgres cases.case_id. Set by AFM on write.</description>
</CustomField>