salesforce/force-app/main/default/objects/Case/fields/AFM_Flight_Id__c.field-meta.xml
<CustomField>
    <fullName>AFM_Flight_Id__c</fullName>
    <label>Flight ICAO24</label>
    <type>Text</type>
    <length>12</length>
    <description>ICAO24 hex identifier for the flight this case concerns. Holds a `WX-{site}` sentinel for site-level cases (weather_impact) where the rule has no specific aircraft — length 12 accommodates the longest sentinel form.</description>
</CustomField>