salesforce/force-app/main/default/objects/Case/fields/AFM_Internal_Url__c.field-meta.xml
<CustomField>
    <fullName>AFM_Internal_Url__c</fullName>
    <label>Internal URL</label>
    <type>Url</type>
    <description>Deeplink to the AFM dashboard for this case.</description>
</CustomField>