salesforce/force-app/main/default/objects/Case/fields/AFM_Runbook_Refs__c.field-meta.xml
<CustomField>
    <fullName>AFM_Runbook_Refs__c</fullName>
    <label>Runbook Refs</label>
    <type>LongTextArea</type>
    <length>4096</length>
    <description>Comma-separated runbook IDs relevant to this case.</description>
</CustomField>