salesforce/force-app/main/default/objects/Case/fields/AFM_Severity_Justification__c.field-meta.xml
<CustomField>
    <fullName>AFM_Severity_Justification__c</fullName>
    <label>Severity Justification</label>
    <type>LongTextArea</type>
    <length>4096</length>
    <description>Agent-generated rationale for the severity assessment.</description>
</CustomField>