salesforce/force-app/main/default/objects/Case/fields/AFM_Site_Icao__c.field-meta.xml
<CustomField>
    <fullName>AFM_Site_Icao__c</fullName>
    <label>Site ICAO</label>
    <type>Text</type>
    <length>4</length>
    <description>ICAO of the affected airport.</description>
</CustomField>