salesforce/force-app/main/default/objects/Case/recordTypes/Fleet_Operations.recordType-meta.xml
<RecordType>
    <fullName>Fleet_Operations</fullName>
    <active>true</active>
    <businessProcess>AFM_Fleet_Operations</businessProcess>
    <description>AFM-generated fleet operations anomaly cases.</description>
    <label>Fleet Operations</label>
</RecordType>