salesforce/force-app/main/default/objects/Case/listViews/AFM_Recently_Closed.listView-meta.xml
<ListView>
    <fullName>AFM_Recently_Closed</fullName>
    <label>AFM: Recently Closed (7d)</label>
    <filterScope>Everything</filterScope>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>AFM_Severity_Badge__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>AFM_Case_Type__c</columns>
    <columns>AFM_Flight_Id__c</columns>
    <columns>AFM_Site_Icao__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>AFM_Resolution_Hours__c</columns>
    <filters>
        <field>AFM_External_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.CLOSED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
</ListView>